manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-sudoku-service
spec:
  selector:
    app: super-sudoku
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
